--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="add_dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <!-- //去掉边框 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!-- //设置是否背景模糊 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- //设置半透明 -->
+        <item name="android:windowNoTitle">true</item>
+        <!-- //设置无标题 -->
+        <item name="android:windowFullscreen">false</item>
+        <!-- <item favoritesName="android:backgroundDimEnabled">false</item>activity不变暗 -->
+        <item name="android:windowIsFloating">true</item>
+        <!-- 模糊 -->
+    </style>
+
 </resources>
